--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "langchain-google-genai>=2.1.7",
     "langchain-tavily>=0.2.7",
     "langgraph>=0.5.2",
+    "load-dotenv>=0.1.0",
     "pillow>=11.3.0",
     "streamlit>=1.46.1",
 ]
